syntax = "proto3";

package student;

option go_package = "github.com/mauriciomartinezc/go_grpc/studentpb";

// go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
// go get google.golang.org/protobuf

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative studentpb/student.proto

message Student {
  string id = 1; // Unique UUID for this person.
  string name = 2;
  int32 age = 3;
}

message GetStudentRequest {
  string id = 1;
}

message SetStudentResponse {
  string id = 1;
}

service StudentService {
  // Unary method: GetStudent
  rpc GetStudent(GetStudentRequest) returns (Student);
  // Unary method: SetStudent
  rpc SetStudent(Student) returns (SetStudentResponse);
}